# Parking_System_pi

./: .gitignore  .main.cpp.swp  .process.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  OCR.cpp  OCR.hpp  Opencv.cpp  Plalte.cpp  Plate.hpp  README.md  Svm.cpp  cmake_install.cmake  enter.sh  exit.sh  http_test  main  main.cpp  parking.sh  process.cpp  process.hpp  resopnse.html  run.sh  stdafx.cpp  tmp  utils.hpp
Network/: Http.cpp  Http.hpp  Socket.cpp  Socket.h  Socket.hpp  http.cpp  http.h  http_test  http_test.cpp  psAPI.cpp  psAPI.hpp  thread.cpp
Opencv/: .Plate.cpp.swp  OCR.cpp  OCR.hpp  OCR.xml  Opencv.cpp  Opencv.hpp  Plate.cpp  Plate.hpp  SVMDATA.json  SVMDATA.xml  Svm.cpp  Svm.hpp  Tools.cpp  Tools.hpp  Utils.cpp  Utils.hpp  process.cpp  svmtrain2.xml
div/: divtest  imgdiv.cpp
latex/: annotated.tex  class_client_socket.tex  class_http_message.eps  class_http_message.tex  class_http_request_messge.eps  class_http_request_messge.tex  class_http_response_messge.eps  class_http_response_messge.tex  class_o_c_r.tex  class_o_c_r_trainer.tex  class_plate.tex  class_plate_1_1_text.tex  class_s_v_m_trainer.tex  class_server_socket.tex  class_socket.tex  class_svm.tex  classhttp_1_1_message.eps  classhttp_1_1_message.tex  classhttp_1_1_request_messge.eps  classhttp_1_1_request_messge.tex  classhttp_1_1_response_messge.eps  classhttp_1_1_response_messge.tex  classps_1_1_a_p_i.tex  classsock_1_1_client_socket.eps  classsock_1_1_client_socket.tex  classsock_1_1_server_socket.eps  classsock_1_1_server_socket.tex  classsock_1_1_socket.eps  classsock_1_1_socket.tex  classtools_1_1_analyzer.tex  classtools_1_1_dicider.tex  dir_23924673e3a8472d9378b01bb2c7321f.tex  dir_356d85c7fe3a31f6238a1e4b453e8aed.tex  hierarchy.tex  index.tex  namespacehttp.tex  namespaceprocess.tex  namespaceps.tex  namespaces.tex  namespacesock.tex  (+10 more)
network/: api.cpp  api.hpp  http.cpp  http.hpp  http_test  http_test.cpp  list.cpp  list.hpp  proxyAPI.cpp  proxyAPI.hpp  psAPI.cpp  psAPI.hpp  resopnse.html  serverAPI.cpp  serverAPI.hpp  socket.cpp  socket.hpp  test_server.cpp
number/: SVMDATA.xml  detect_numberplate.cpp  test  utils5.hpp
opencv/: OCR.json  (+8 more)
(+17 files in other folders)
