#cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project(Parking_System)
#find_package( OpenCV REQUIRED )
set(OPENCV_FILES Opencv/Plate.cpp Opencv/Svm.cpp Opencv/OCR.cpp Opencv/Utils.cpp)
set(NETWORK_FILES Network/http.cpp Network/Socket.cpp)
add_executable(main main.cpp ${OPENCV_FILES} ${NETWORK_FILES} )
#target_link_libraries(main ${OpenCV_LIBS} )