cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project(Parking_System)
find_package( OpenCV REQUIRED )
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

set(OPENCV_FILES Opencv/Plate.cpp Opencv/Svm.cpp Opencv/OCR.cpp Opencv/Utils.cpp Opencv/Opencv.cpp )
set(NETWORK_FILES Network/http.cpp Network/Socket.cpp)
add_executable(main main.cpp ${OPENCV_FILES} ${NETWORK_FILES} )
target_link_libraries(main ${OpenCV_LIBS} )
  
